fix(bulma-ui): retry failed Avatar src, flatten Fragment children in Avatars, RTL-safe overlap (#297)

--- a/bulma-ui/src/scss/components/_avatars.scss
+++ b/bulma-ui/src/scss/components/_avatars.scss
@@ -46,7 +46,9 @@ $avatars-spacing-lg: 1rem !default;
       cv.getVar('avatars-ring-color');
 
     &:not(:first-child) {
-      margin-left: calc(-1 * #{cv.getVar('avatars-spacing')});
+      // Logical property so the stack overlaps toward the reading direction
+      // (a physical margin-left pulls avatars apart under dir="rtl").
+      margin-inline-start: calc(-1 * #{cv.getVar('avatars-spacing')});
     }
   }
 
@@ -59,7 +61,7 @@ $avatars-spacing-lg: 1rem !default;
       box-shadow: none;
 
       &:not(:first-child) {
-        margin-left: 0;
+        margin-inline-start: 0;
       }
     }
   }
